--- a/build.gradle
+++ b/build.gradle
@@ -13,20 +13,20 @@ repositories {
 }
 
 dependencies {
-    implementation 'info.picocli:picocli:4.7.0'
-    implementation 'mysql:mysql-connector-java:8.0.30'
-    implementation 'com.github.spotbugs:spotbugs-annotations:4.7.3'
-    testImplementation 'com.h2database:h2:2.1.214'
-    testImplementation 'org.assertj:assertj-core:3.23.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-    testImplementation 'org.mockito:mockito-inline:4.8.0'
+    implementation 'info.picocli:picocli:4.7.5'
+    implementation 'com.mysql:mysql-connector-j:8.0.33'
+    implementation 'com.github.spotbugs:spotbugs-annotations:4.8.3'
+    testImplementation 'com.h2database:h2:2.2.224'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
     testImplementation 'org.awaitility:awaitility:4.2.0'
     testImplementation 'com.github.stefanbirkner:system-lambda:1.2.1'
 }
 
 group = 'com.henrya.tools'
-version = '1.0.1'
+version = '1.0.2'
 description = 'htcleaner - a tool to clean large tables in the database'
 java.sourceCompatibility = JavaVersion.VERSION_1_8
 
@@ -60,7 +60,7 @@ jacocoTestReport {
 }
 
 jacoco {
-    toolVersion = "0.8.7"
+    toolVersion = "0.8.11"
 }
 
 jar {
