--- a/build.gradle
+++ b/build.gradle
@@ -12,25 +12,30 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    byteBuddyAgent
+}
+
 dependencies {
     implementation 'info.picocli:picocli:4.7.5'
-    implementation 'com.mysql:mysql-connector-j:8.0.33'
-    implementation 'com.github.spotbugs:spotbugs-annotations:4.8.3'
+    implementation 'com.mysql:mysql-connector-j:8.3.0'
+    implementation 'com.github.spotbugs:spotbugs-annotations:4.8.4'
     testImplementation 'com.h2database:h2:2.2.224'
-    testImplementation 'org.assertj:assertj-core:3.24.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
-    testImplementation 'org.mockito:mockito-inline:5.2.0'
-    testImplementation 'org.awaitility:awaitility:4.2.0'
+    testImplementation 'org.assertj:assertj-core:3.25.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+    testImplementation 'org.awaitility:awaitility:4.2.1'
     testImplementation 'com.github.stefanbirkner:system-lambda:1.2.1'
+    byteBuddyAgent "net.bytebuddy:byte-buddy-agent:1.14.13"
 }
 
 group = 'com.henrya.tools'
-version = '1.0.2'
+version = '1.0.3'
 description = 'htcleaner - a tool to clean large tables in the database'
 java.sourceCompatibility = JavaVersion.VERSION_1_8
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
@@ -39,6 +44,7 @@ test {
         events "PASSED", "SKIPPED", "FAILED", "STANDARD_OUT", "STANDARD_ERROR"
     }
     useJUnitPlatform()
+    jvmArgs( "-javaagent:${ configurations.byteBuddyAgent.singleFile }" )
     finalizedBy jacocoTestReport // report is always generated after tests run
 }
 
@@ -60,7 +66,7 @@ jacocoTestReport {
 }
 
 jacoco {
-    toolVersion = "0.8.11"
+    toolVersion = "0.8.12"
 }
 
 jar {
@@ -73,7 +79,7 @@ jar {
     }
 }
 
-task jarWithDepenencies(type: Jar) {
+tasks.register('jarWithDepenencies', Jar) {
     manifest {
         attributes "Main-Class": "com.henrya.tools.htcleaner.Application"
     }
