--- a/build.gradle
+++ b/build.gradle
@@ -23,21 +23,22 @@ configurations {
 }
 
 dependencies {
-    implementation 'info.picocli:picocli:4.7.6'
-    implementation 'com.mysql:mysql-connector-j:9.2.0'
+    implementation 'info.picocli:picocli:4.7.7'
+    implementation 'com.mysql:mysql-connector-j:9.3.0'
     implementation 'com.github.spotbugs:spotbugs-annotations:4.9.3'
     testImplementation 'com.h2database:h2:2.3.232'
     testImplementation 'org.assertj:assertj-core:3.27.3'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
-    testImplementation 'org.mockito:mockito-core:5.17.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.13.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-engine:1.13.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.13.2'
+    testImplementation 'org.mockito:mockito-core:5.18.0'
     testImplementation 'org.awaitility:awaitility:4.3.0'
     testImplementation 'com.github.stefanbirkner:system-lambda:1.2.1'
     byteBuddyAgent "net.bytebuddy:byte-buddy-agent:1.17.5"
 }
 
 group = 'com.henrya.tools'
-version = '1.0.4'
+version = '1.0.5'
 description = 'htcleaner - a tool to clean large tables in the database'
 java.sourceCompatibility = JavaVersion.VERSION_1_8
 
